<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:background="@color/blue_type05"
    tools:context=".view.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:backgroundTint="@color/blue_type01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/background_general"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="18dp"

                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="true"
                />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="18dp"
                android:layout_marginTop="28dp"

                android:text="@string/txt_name_placeholder"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/roboto_medium" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/saldo_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"

        android:text="@string/txt_saldo_conta_main"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintTop_toBottomOf="@id/CardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cheque_especial_conta"

        />

    <TextView
        android:id="@+id/txt_saldo_disponivel_plc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="60dp"

        android:text="@string/txt_conta"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintTop_toBottomOf="@id/saldo_conta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cheque_especial_conta"
        />

    <TextView
        android:id="@+id/cheque_especial_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"

        android:text="@string/txt_saldo_conta_main"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintStart_toEndOf="@id/saldo_conta"
        app:layout_constraintTop_toBottomOf="@id/CardView"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/txt_cheque_disponivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"

        android:text="@string/txt_cheque_especial"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintTop_toBottomOf="@id/cheque_especial_conta"
        app:layout_constraintStart_toEndOf="@id/saldo_conta"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_depositar"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="80dp"

        android:background="@drawable/btn_background"
        android:backgroundTint="@color/blue_type01"

        android:text="@string/txt_depositar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintTop_toBottomOf="@id/txt_saldo_disponivel_plc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_Sacar"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Sacar"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"

        android:background="@drawable/btn_background"
        android:backgroundTint="@color/blue_type01"

        android:text="@string/txt_sacar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintTop_toBottomOf="@id/btn_depositar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hint_user_valor"

        />

    <EditText
        android:id="@+id/hint_user_valor"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"

        android:background="@drawable/edit_text_background"
        android:backgroundTint="@color/blue_type01"

        android:hint="@string/hint_txt_inserir_valor"
        android:textColorHint="@color/blue_type01"
        android:padding="10dp"
        android:autofillHints="null"
        android:inputType="number|numberDecimal"

        android:maxLines="1"

        app:layout_constraintTop_toBottomOf="@id/btn_Sacar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_Transferir"


        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Transferir"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="80dp"

        android:background="@drawable/btn_background"
        android:backgroundTint="@color/blue_type01"

        android:text="@string/txt_transferir"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintTop_toBottomOf="@id/hint_user_valor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>